feat: Add tests for BlobContainerService and StorageAccountService
- Changed reconciliation loop for BlobContainerReconciler and FileShareReconciler to set storage account name in annotations from workflow context.
- Blob storage lifetime not set if no time provided